tests/types-first-function-statics2/types-first-function-statics2.exp
Error --------------------------------------------------------------------------------------------------------- b.js:7:2

Cannot cast `a.g` to number because string [1] is incompatible with number [2].

   b.js:7:2
   7| (a.g: number);
       ^^^

References:
   a.js:5:20
   5| module.exports.g = "a";
                         ^^^ [1]
   b.js:7:7
   7| (a.g: number);
            ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- b.js:8:2

Cannot get `a.other` because property `other` is missing in statics of function type [1].

   b.js:8:2
   8| (a.other: string);
       ^^^^^^^

References:
   a.js:3:18
   3| module.exports = () => {};
                       ^^^^^^^^ [1]



Found 2 errors
